# simple-gslb

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  index.yaml  pyproject.toml  requirements.txt  test.sh
.github/workflows/: release.yml
charts/simplegslb/: Chart.yaml  values.yaml
charts/simplegslb/templates/: crd.yaml  deploy.yaml  rbac.yaml  service.yaml
src/: controller.py  main.py
src/templates/: corefile.j2  zonefile.j2
