[project]
name = "simple-gslb"
version = "0.1.0"
description = "Simple GSLB solution using CoreDNS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kubernetes>=34.1.0",
    "respx>=0.22.0",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
